apps/auth/lldap/ingress.yaml
# traefik.containo.us/v1alpha1 depreciated in Traefik v3
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: lldap-ui
    annotations:
        kubernetes.io/ingress.class: traefik-internal
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:MwDrA8cETxwrL/fGl0G3WOJh2kAOd3Cf0o74jJQllHv04g==,iv:CjtXFT5nIjGA5FMvpKEoUQwYsJoF7uYoin6U+FI4RXo=,tag:/NF8Xh4l6eDhsDK16IFR8g==,type:str]
          kind: Rule
          services:
            - name: lldap-http
              port: 17170
          middlewares:
            - name: forwardauth-authelia
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1r3ehz4v5czfczcmfgnyuc7zmz8pjl055shhek88nsjv2xnrnkq8svjnj5c
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZcDRIR1d5RGFrbUtuZ2Jw
[...]
            8eBBEoU+Y3vxIAcS02UxlPG2rBOLOjVufhvxdQrnCf0V07E54JS4bw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-17T20:13:37Z"
    mac: ENC[AES256_GCM,data:M85Gx/w7IfjaNm/pdHkacZunCFYsY3m3pdINYkj1lWjn/AQ5pma7fwl2xJgPNvZNJoQB/a3F5fH2q66BGomiaSN/rqmdLezMK0zXwTdY6l49jFMbRPunTh6b4gsDDphacOosH7y7R/Iq2+TezdFUXHSaCt9+SbgVZPI9Jp3Tb5o=,iv:phMD7Zngy9oMQMw7cIR2qZ37IuOOX88y/+yB2qpHzeQ=,tag:lEU12pBy1aGqqpu0v0xoMQ==,type:str]
    pgp: []
    encrypted_regex: ^(match)$
    version: 3.9.1
